fix position sizing on mobile

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -229,11 +229,11 @@ a:focus::before {
 	/* min-height: calc(100vh - 0.6em); */
 	margin: 0;
 	/* border-radius: 0.3em; */
-	overflow: auto;
+	overflow: hidden;
 	flex-grow: 1;
 	z-index: 1;
 	background-color: var(--clr-body);
-	max-width: calc(100vw - 1em);
+	max-width: calc(100vw);
 }
 
 .h-flex-container {
